--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.obsidian/workspace
-.obsidian.tablet/workspace
-.obsidian.mobile/workspace
+.obsidian/workspace.json
+.obsidian.tablet/workspace.json
+.obsidian.mobile/workspace.json
 
